--- a/gb/19/11/15/n11658137.md
+++ b/gb/19/11/15/n11658137.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vrubu242/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vrubu242/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vrubu242/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vrubu242/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vrubu242/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vrubu242/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vrubu242/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vrubu242/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/vrubu242/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vrubu242/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vrubu242/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vrubu242/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vrubu242/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中市iBike年摔上百起 挨批投保率不到双北一半</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/429b437e61575ad939c1cdd4ac9f5bed-600x400.jpg" />
 <h6>议员杨典忠说，iBike交通事故与自摔案年年增加，民众投保率却不到双北一半。（杨典忠议员办公室提供）
 </h6>
 <hr>
-<p>【大纪元2019年11月15日讯】（大纪元记者黄玉燕台湾台中报导）台中市交通局去年11月起，为iBike使用者投保<ahref="https://github.com/vrubu242/djy/blob/master/gb/tag/%E5%85%AC%E5%85%B1%E8%87%AA%E8%A1%8C%E8%BD%A6.md#1">公共自行车</a><ahref="https://github.com/vrubu242/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%89%E8%B4%A3%E4%BB%BB%E9%99%A9.md#1">第三责任险</a>，今年7月起提供伤害险。议员杨典忠15日于议会批交通局不作为，他说，根据统计iBike交通事故与自摔案件数，从103年的个位数、107年增加到153件，但iBike伤害险投保者仅6万3648人次；若依7~9月总人次计算，投保比例只有8%，顺利申请理赔只有1件，他批，对照双北、桃园、真的差很大。</p>
-<p>杨典忠表示，依照台中市警局自行车交通事故统计，近三年多来A1类自行车交通事故发生10件，其中今年1到6月发生案件(5件)是前三年(105~107年)案件数总和；另外iBike交通事故与自摔案件数年年增加，从103年个位数，107年增加到153件，台中市<ahref="https://github.com/vrubu242/djy/blob/master/gb/tag/%E5%85%AC%E5%85%B1%E8%87%AA%E8%A1%8C%E8%BD%A6.md#1">公共自行车</a>伤害保险有其必要性。</p>
-<p>杨典忠说，但是台中市自7月1日实施至今，iBike伤害险<ahref="https://github.com/vrubu242/djy/blob/master/gb/tag/%E6%8A%95%E4%BF%9D%E7%8E%87.md#1">投保率</a>仅8%，申请理赔案件只有1件，比较台北市19%、新北市18%、桃园市15%，实在差太多！对于市府只要求厂商在iBike网页上宣传，他批，有9成使用iBike人次没有投保伤害险，是民众不需要伤害险吗？他要求市府应加强宣导。</p>
-<p>交通局长叶昭甫表示，目前台中市内iBike据点为328站，根据明年将推动的iBike倍增计划，预计再新增300站。关于公共自行车伤害险<ahref="https://github.com/vrubu242/djy/blob/master/gb/tag/%E6%8A%95%E4%BF%9D%E7%8E%87.md#1">投保率</a>，由于投保伤害险需提供被保险人个资，许多市民会顾虑隐私等问题，交通局会持续透过各种管道宣导。</p>
-<p>交通局说明，<ahref="https://github.com/vrubu242/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%89%E8%B4%A3%E4%BB%BB%E9%99%A9.md#1">第三责任险</a>保障民众在公共自行车取车后至成功归还前，如因使用自行车发生意外事故致第三人遭受体伤或死亡，并须负赔偿责任时，保险公司会在保险金额范围内给付赔偿金，每人最高新台币200万元；而公共自行车伤害险，保障若骑乘iBike受伤致死亡、失能者，最高可获100万元理赔金，如受伤住院，每日也有1000元医疗保障。</p>
+<p>【大纪元2019年11月15日讯】（大纪元记者黄玉燕台湾台中报导）台中市交通局去年11月起，为iBike使用者投保<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%AC%E5%85%B1%E8%87%AA%E8%A1%8C%E8%BD%A6.md#1">公共自行车</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%89%E8%B4%A3%E4%BB%BB%E9%99%A9.md#1">第三责任险</a>，今年7月起提供伤害险。议员杨典忠15日于议会批交通局不作为，他说，根据统计iBike交通事故与自摔案件数，从103年的个位数、107年增加到153件，但iBike伤害险投保者仅6万3648人次；若依7~9月总人次计算，投保比例只有8%，顺利申请理赔只有1件，他批，对照双北、桃园、真的差很大。</p>
+<p>杨典忠表示，依照台中市警局自行车交通事故统计，近三年多来A1类自行车交通事故发生10件，其中今年1到6月发生案件(5件)是前三年(105~107年)案件数总和；另外iBike交通事故与自摔案件数年年增加，从103年个位数，107年增加到153件，台中市<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%AC%E5%85%B1%E8%87%AA%E8%A1%8C%E8%BD%A6.md#1">公共自行车</a>伤害保险有其必要性。</p>
+<p>杨典忠说，但是台中市自7月1日实施至今，iBike伤害险<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8A%95%E4%BF%9D%E7%8E%87.md#1">投保率</a>仅8%，申请理赔案件只有1件，比较台北市19%、新北市18%、桃园市15%，实在差太多！对于市府只要求厂商在iBike网页上宣传，他批，有9成使用iBike人次没有投保伤害险，是民众不需要伤害险吗？他要求市府应加强宣导。</p>
+<p>交通局长叶昭甫表示，目前台中市内iBike据点为328站，根据明年将推动的iBike倍增计划，预计再新增300站。关于公共自行车伤害险<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8A%95%E4%BF%9D%E7%8E%87.md#1">投保率</a>，由于投保伤害险需提供被保险人个资，许多市民会顾虑隐私等问题，交通局会持续透过各种管道宣导。</p>
+<p>交通局说明，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%89%E8%B4%A3%E4%BB%BB%E9%99%A9.md#1">第三责任险</a>保障民众在公共自行车取车后至成功归还前，如因使用自行车发生意外事故致第三人遭受体伤或死亡，并须负赔偿责任时，保险公司会在保险金额范围内给付赔偿金，每人最高新台币200万元；而公共自行车伤害险，保障若骑乘iBike受伤致死亡、失能者，最高可获100万元理赔金，如受伤住院，每日也有1000元医疗保障。</p>
 <p>此外，理赔程序中，为确认保险登录者是否为持租借卡片本人，保险公司理赔程序将调阅iBike租借纪录、医疗证明等。</p>
 <p>责任编辑：王愉悦</p>
 
@@ -18,42 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/18/9/6/n10694496.md#1">桃园首件民间捐赠YouBike站  打造绿色生态典范城市</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/18/9/20/n10727684.md#1">新北YouBike伤害险10月1日上路 即日起开放登录</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/18/9/25/n10739749.md#1">北北桃自行车伤害险 下月起上路</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/19/3/1/n11082081.md#1">搭淡海轻轨相遇几米 欢赏樱花眺望海景</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/19/4/18/n11196012.md#1">新店区YouBike加2站 宝桥路及青潭公园</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/19/6/28/n11352065.md#1">中市iBike伤害险7月上路   最高理赔100万</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/19/9/2/n11493405.md#1">YouBike百万周年庆 苗栗交通好便利</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/19/9/4/n11498284.md#1">814款MIT微笑产品 1日起纳入环保集点</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/19/9/10/n11511363.md#1">桃市与中科院 建置YouBike绿色交通服务网</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/19/10/30/n11622403.md#1">嘉义市区公车全电动化 市府争取2020年公车预算</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/6/n10694496.md#1">桃园首件民间捐赠YouBike站  打造绿色生态典范城市</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/20/n10727684.md#1">新北YouBike伤害险10月1日上路 即日起开放登录</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/25/n10739749.md#1">北北桃自行车伤害险 下月起上路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/3/1/n11082081.md#1">搭淡海轻轨相遇几米 欢赏樱花眺望海景</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/18/n11196012.md#1">新店区YouBike加2站 宝桥路及青潭公园</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/28/n11352065.md#1">中市iBike伤害险7月上路 最高理赔100万</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/2/n11493405.md#1">YouBike百万周年庆 苗栗交通好便利</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/4/n11498284.md#1">814款MIT微笑产品 1日起纳入环保集点</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/10/n11511363.md#1">桃市与中科院 建置YouBike绿色交通服务网</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/30/n11622403.md#1">嘉义市区公车全电动化 市府争取2020年公车预算</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/2/n11295844.md#1" target="_blank">沧海：折寿三十年与延寿三十年</a></li><li><a href="https://github.com/vrubu242/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/20/n4014880.md#1" target="_blank">修炼人的故事：从地狱到天堂</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/26/n9993508.md#1" target="_blank">爱德华：中共从道德上彻底摧毁中国人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/23/n11967780.md#1">【新闻看点】川习对话说啥 红二代倒戈习危急？</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/23/n11968139.md#1">马列教授千里散毒？意首例确诊病例身份曝光</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/23/n11965551.md#1">分析：大疫之下中国两千万手机用户消失</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/23/n11964881.md#1">武汉病例清零内幕被曝光 北京通知露端倪</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
-<li><a href="https://github.com/vrubu242/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vrubu242/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vrubu242/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/15/n11658137.htm">中市iBike年摔上百起 挨批投保率不到双北一半</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/15/n11658137.htm">中市iBike年摔上百起 挨批投保率不到双北一半</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/vrubu242/djy/blob/master/gb/19/11/15/n11658137.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vrubu242/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vrubu242/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vrubu242/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vrubu242/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vrubu242/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/11/15/n11658137.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
